@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2020, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2021, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * ------------------
  * KeyToGroupMap.java
  * ------------------
- * (C) Copyright 2004-2020, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2004-2021, by Object Refinery Limited and Contributors.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
@@ -46,9 +46,9 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import org.jfree.chart.util.ObjectUtils;
-import org.jfree.chart.util.Args;
-import org.jfree.chart.util.PublicCloneable;
+
+import org.jfree.chart.internal.Args;
+import org.jfree.chart.api.PublicCloneable;
 
 /**
  * A class that maps keys (instances of {@code Comparable}) to groups.
@@ -220,7 +220,7 @@ public class KeyToGroupMap<K extends Comparable<K>, G extends Comparable<G>>
             return false;
         }
         KeyToGroupMap<K, G> that = (KeyToGroupMap) obj;
-        if (!ObjectUtils.equal(this.defaultGroup, that.defaultGroup)) {
+        if (!Objects.equals(this.defaultGroup, that.defaultGroup)) {
             return false;
         }
         if (!this.keyToGroupMap.equals(that.keyToGroupMap)) {
@@ -299,10 +299,9 @@ public class KeyToGroupMap<K extends Comparable<K>, G extends Comparable<G>>
         Collection result = null;
         if (list != null) {
             try {
-                List clone = (List) list.getClass().newInstance();
-                Iterator iterator = list.iterator();
-                while (iterator.hasNext()) {
-                    clone.add(KeyToGroupMap.clone(iterator.next()));
+                Collection clone = list.getClass().getDeclaredConstructor().newInstance();
+                for (Object o : list) {
+                    clone.add(KeyToGroupMap.clone(o));
                 }
                 result = clone;
             }
